# chessengine

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: formatting.yml  linting.yml
chessengine/: __init__.py  __main__.py  bitboard.py  cli.py  exceptions.py  lookup_tables.py  moves.py  play.py  state.py  utils.py
chessengine/openings/ViswanathanAnand/: ViswanathanAnand.pgn
chessengine/pgn/: __init__.py  node.py  parser.py  utils.py
docs/: api.rst  chessboard.rst  conf.py  index.rst  playing.rst  requirements.txt  usage.rst
docs/_build/doctrees/: api.doctree  chessboard.doctree  contributing.doctree  environment.pickle  index.doctree  playing.doctree  usage.doctree
docs/_build/doctrees/ref/: chessengine.bitboard.doctree  chessengine.exceptions.doctree  chessengine.lookup_tables.doctree  chessengine.moves.doctree  chessengine.pgn.node.doctree  chessengine.pgn.parser.doctree  chessengine.state.doctree  chessengine.utils.doctree
docs/_build/html/: .buildinfo  api.html  chessboard.html  contributing.html  genindex.html  index.html  objects.inv  playing.html  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.rst.txt  chessboard.rst.txt  contributing.rst.txt  index.rst.txt  playing.rst.txt  usage.rst.txt
docs/ref/: chessengine.bitboard.rst  chessengine.moves.rst  chessengine.pgn.node.rst  chessengine.state.rst  chessengine.utils.rst
src/: bitboard.py  lookup_tables.py  moves.py  utils.py
tests/: test_bitboard.py  test_lookup_tables.py  test_moves.py  test_utils.py
(+13 files in other folders)
