[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chessengine*", "chessengine/pgn*"]

[tool.setuptools.package-data]
openings = ["*.pgn"]

[project]
name = "chessengine"
version = "0.3.1"
authors = [
    {name="Hrushikesh Vaidya", email="hrushikeshrv@gmail.com"},
]
description = "A chess engine with no dependencies"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
chessengine = "chessengine.cli:main"

[project.urls]
"Homepage" = "https://github.com/hrushikeshrv/chessengine"
"Bug Tracker" = "https://github.com/hrushikeshrv/chessengine/issues"